--- a/src/components/testimonials.css
+++ b/src/components/testimonials.css
@@ -72,7 +72,8 @@
   line-height: 1.6;
   color: #6d4e35;
   margin-bottom: 1.2rem;
-  font-family: 'Lora', serif;
+  font-family: "Inter", sans-serif;
+  font-style: italic;
 }
 
 .testi-name {
@@ -80,7 +81,7 @@
   color: #9d62f2;
   font-size: 1rem;
   text-align: right;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Montserrat', sans-serif; 
 }
 
 /* Arrows + Dots */
