--- a/src/components/service.css
+++ b/src/components/service.css
@@ -95,7 +95,7 @@
   background: #fffafd;
   border: 1px solid #f3dce6;
   border-radius: 1rem;
-  padding: 2rem 1rem;
+  padding: 1rem 1rem;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.05);
 }
 
@@ -115,17 +115,18 @@
 }
 
 .video-wrapper {
-  border-radius: 1rem;
+  border-radius: 1.5em;
   overflow: hidden;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.08);
   max-width: 100%;
-  margin: 0 auto;
+  object-fit: contain;
+  background: #000;   
+ margin: 0  auto;
 }
 
 .styled-video {
   width: 100%;
-  max-height: 320px;
-  object-fit: cover;
+  max-height: 420px;
   display: block;
   border: none;
 }
